<resources>
    <string name="app_name">Billage</string>
    <string name="title_home">Home</string>
    <string name="title_billge">Billage</string>
    <string name="title_quest">Quest</string>
    <string name="title_mypage">My Page</string>
    <string name="mypage_account_modify">회원정보 수정</string>
    <string name="mypage_add_bank">은행연동 현황</string>
    <string name="mypage_current_bank">은행연동 추가</string>
    <string name="mypage_set_password">앱 비밀번호 설정</string>
    <string name="mypage_set_notify">알림 설정</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_view_content_description">Game view</string>
    <string name="title_cancel">취소</string>
    <string name="title_save">저장</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>