<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.billage.frontend.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home" />

    <fragment
        android:id="@+id/navigation_billage"
        android:name="com.example.billage.frontend.ui.billage.BillageFragment"
        android:label="@string/title_billge"
        tools:layout="@layout/quest" />

    <fragment
        android:id="@+id/navigation_quest"
        android:name="com.example.billage.frontend.ui.quest.QuestFragment"
        android:label="@string/title_quest"
        tools:layout="@layout/billage" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.example.billage.frontend.ui.mypage.MypageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/billage" />
</navigation>
